# org2lichess

./: .gitignore  Cargo.toml  Config.default.toml  README.md  Rocket.toml  Rocket.toml.default
public/: robots.txt
public/error/: badrequest.html  forbidden.html  notfound.html  servererror.html  timeout.html
public/styles/: main.css
src/: azolve.rs  config.rs  db.rs  ecf.rs  expwatch.rs  lichess.rs  main.rs  org.rs  randstr.rs  session.rs  state.rs  tempctx.rs  textlog.rs  types.rs
templates/: admin.html.tera  base.html.tera  form.html.tera  index.html.tera  kickconfirm.html.tera  linked.html.tera  loggedin.html.tera  notlinked.html.tera  redirect.html.tera  user.html.tera
