[package]
name = "org2lichess"
version = "0.1.0"
authors = ["Thomas Daniels"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
rand = "0.8"
reqwest = "0.9.18"
chrono = "0.4"
chrono-tz = "0.5"
r2d2 = "0.8"
r2d2_postgres = "0.18"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["tera_templates"]
