[package]
name = "org2lichess"
version = "0.1.0"
authors = ["Thomas Daniels"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
rand = "0.8"
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
chrono = "= 0.4.29"
chrono-tz = "0.5"
r2d2 = "0.8"
r2d2_postgres = "0.18"
urlencoding = "2.1"
sha2 = "0.10"
base64 = "0.21"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["tera_templates"]

[patch.crates-io]
traitobject = { git = "https://github.com/reem/rust-traitobject", rev = "b3471a15917b2caf5a8b27debb0b4b390fc6634f" }
