[package]
name = "org2lichess"
version = "0.1.0"
authors = ["Thomas Daniels"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
rand = "0.9"
reqwest = { version = "0.12", features = [ "json" ] }
chrono = "= 0.4"
chrono-tz = "0.10"
bb8 = "0.9"
bb8-postgres = "0.9"
urlencoding = "2.1"
sha2 = "0.10"
base64 = "0.22"
